 * changed load and require in comiled Murmel: must appear at toplevel
 * changed/fixed car to accept all strings
 * changed read-textfile and read-textfile-lines to use UTF-8 as the default charset
   (unless the charset was given as an argument)
 * changed read-textfile to no longer append a #\Newline at the end

 * added *random-state*
 * added the commandline parameter --eval

 * fixed read-from-string: handle feature-expressions correctly, intern symbols correctly
 * fixed compiled random-state-p and make-random-state
 * fixed passing *command-line-argument-list between interpreter <=> compiled Murmel
 * fixed compiled presized "make-hash-table"


Changes in JMurmel-1.4.3 relative to JMurmel-1.4.2
released: 20.5.2023

 * removed get-internal-cpu-time
 * added random, make-random-state, random-state-p
 * defun and defmacro now accept (and ignore) optional docstrings

 * mlib: "last" now has an optional parameter n


Changes in JMurmel-1.4.2 relative to JMurmel-1.4.1
released: 2023-02-16

 * changed write, writeln, lnwrite, format, format-locale
   to also accept an adjustable string as destination
 * changed log to accept a second optional parameter
 * added the reader macro #R

 * mlib: added string-subseq, with-output-to-string

 * fixed backquote forms with vector- and hashliterals 


Changes in JMurmel-1.4.1 relative to JMurmel-1.4
released: 2023-02-04

 * fixed sxhash to return nonnegative integer values
 * fixed using macroexpand-1 & gensym in compiled code

 * added the function "string"

 * mlib: added multiple-value-list, nth-value

 * don't merge Windows launcher + jar to avoid virus warnings


Changes in JMurmel-1.4 relative to JMurmel-1.3.1
released: 2023-01-13

 * removed the undocumented function "fatal" from Murmel,
   moved the function "error" from mlib to Murmel and now it is similar to CL's "error"
 * moved "equal" from mlib to Murmel

 * added the functions "read-from-string", "write-to-string"