@@ -190,13 +190,6 @@ of Lisp pp 62"):
 > T is a keyword recognized by certain functions, such as FORMAT.
 
 
-### dynamic
-`dynamic` is a pre-defined self-evaluating symbol that may be used
-in the `(lambda dynamic...` (interpreter only) and `(let* dynamic...` forms, see below.
-
-    dynamic ; ==> dynamic
-
-
 ### internal-time-units-per-second
 `internal-time-units-per-second` contains the resolution
 of the time related functions, see below.
